--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mind-console",
-  "version": "1.0.0",
+  "name": "MSC",
+  "version": "1.1.0",
   "description": "",
   "main": "src/main.js",
   "dependencies": {
